# NumC-CPlotLib

./: .gitignore  CMakeLists.txt  README.md  main.c
Source/: cplotlib.c  cplotlib.h  ncautodiff.h  ncmatrix.c  ncmatrix.h  ncvector.c  ncvector.h  numc.c  numc.h
